accesibility updates and removed function

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
     <li class="nav-item"><a href="#abt">About</a></li>
     <!-- <li class="nav-item"><a href="#">About</a></li> -->
     <div id="open">
-      <li id="menu"><i class="fa fa-bars" aria-hidden="true" id="menu" (click)="toggle()"></i></li>
+      <div id="menu"><i class="fa fa-bars" aria-hidden="true" (click)="toggle()"></i></div>
     </div>
 
   </ul>
