added alt tags to images

--- a/src/app/body/about/about.component.html
+++ b/src/app/body/about/about.component.html
@@ -1,6 +1,6 @@
 <div id="about">
     <div id="aboutphoto-container">
-        <img id="aboutphoto" src="https://avatars3.githubusercontent.com/u/41450290?s=400&u=e2d203f900cf7adc68cfdbdfff3f011f679226a9&v=4">
+        <img id="aboutphoto" src="https://avatars3.githubusercontent.com/u/41450290?s=400&u=e2d203f900cf7adc68cfdbdfff3f011f679226a9&v=4" alt="Picture of Jaime Moncayo">
         <h1 class="ribbon">
             <strong class="ribbon-content" style="font-family: 'Lobster', cursive;">About Me</strong>
         </h1>
