--- a/src/app/body/technologies/technologies.component.html
+++ b/src/app/body/technologies/technologies.component.html
@@ -8,14 +8,14 @@
             I'VE WORKED WITH...
         </div>
         <div>
-            <div id="imgone" class="fixed-width-tech" style="display:none;"><img src="../../../assets/angular.svg"></div>
-            <div id="imgtwo" class="fixed-width-tech" style="display:none;"><img src="../../../assets/HTML5_Logo.svg"></div>
-            <div id="imgthree" class="fixed-width-tech" style="display:none;"><img src="../../../assets/mongo.svg" style="width:var(--mobile-brands)"></div>
-            <div id="imgfour" class="fixed-width-tech" style="display:none;"><img src="../../../assets/gitlogo.png" style="width:var(--mobile-brands)"></div>
-            <div id="imgfive" class="fixed-width-tech" style="display:none;"><img src="../../../assets/nodeJS.png" style="width:var(--mobile-brands)"></div>
-            <div id="imgsix" class="fixed-width-tech" style="display:none;"><img src="../../../assets/oracle.png" style="width:var(--mobile-brands)"></div>
-            <div id="imgseven" class="fixed-width-tech" style="display:none;"><img src="../../../assets/jiralogo.svg" style="width:var(--mobile-brands)"></div>
-            <div id="imgeight" class="fixed-width-tech" style="display:none;"><img src="../../../assets/python.svg" style="width:var(--mobile-brands); height: 40%"></div>
+            <div id="imgone" class="fixed-width-tech" style="display:none;"><img src="../../../assets/angular.svg" alt="angular logo"></div>
+            <div id="imgtwo" class="fixed-width-tech" style="display:none;"><img src="../../../assets/HTML5_Logo.svg" alt="html5 logo"></div>
+            <div id="imgthree" class="fixed-width-tech" style="display:none;"><img src="../../../assets/mongo.svg" style="width:var(--mobile-brands)" alt="mongoDB logo"></div>
+            <div id="imgfour" class="fixed-width-tech" style="display:none;"><img src="../../../assets/gitlogo.png" style="width:var(--mobile-brands)" alt="git logo"></div>
+            <div id="imgfive" class="fixed-width-tech" style="display:none;"><img src="../../../assets/nodeJS.png" style="width:var(--mobile-brands)" alt="nodeJS logo"></div>
+            <div id="imgsix" class="fixed-width-tech" style="display:none;"><img src="../../../assets/oracle.png" style="width:var(--mobile-brands)" alt="oracle logo"></div>
+            <div id="imgseven" class="fixed-width-tech" style="display:none;"><img src="../../../assets/jiralogo.svg" style="width:var(--mobile-brands)" alt="jira logo"></div>
+            <div id="imgeight" class="fixed-width-tech" style="display:none;"><img src="../../../assets/python.svg" style="width:var(--mobile-brands); height: 40%" alt="python logo"></div>
 
         </div>
     </h1>
