--- a/src/app/body/cover/cover.component.html
+++ b/src/app/body/cover/cover.component.html
@@ -1,7 +1,7 @@
 <div id="cover" class="coverimg">
 </div>
 <section id="section07" class="demo">
-  <a href="#abt">
+  <a href="#abt" aria-label="scroll to next section button">
     <span></span>
     <span></span>
   </a>
