--- a/src/app/body/contact/contact.component.html
+++ b/src/app/body/contact/contact.component.html
@@ -1,13 +1,13 @@
 <div id="contact">
     <div id="photo">
         <span id="contact-icons">
-            <a href="https://github.com/andresmonc" target="_blank" rel="noreferrer">
+            <a href="https://github.com/andresmonc" target="_blank" rel="noreferrer" aria-label="View the developers github profile">
                 <i class="fa fa-github"></i>
             </a>
-            <a href="https://www.linkedin.com/in/jaime-moncayo" target="_blank" rel="noreferrer">
+            <a href="https://www.linkedin.com/in/jaime-moncayo" target="_blank" rel="noreferrer" aria-label="view the devlopers linkedin profile">
                 <i class="fa fa-linkedin-square fa-fw"></i>
             </a>
-            <a href="https://www.freecodecamp.org/andresmonc" target="_blank" rel="noreferrer">
+            <a href="https://www.freecodecamp.org/andresmonc" target="_blank" rel="noreferrer" aria-label="view the developers FreeCodeCamp profile">
                 <i class="fa fa-free-code-camp fa-fw"></i>
             </a>
         </span>
