--- a/src/app/body/resume/resume.component.html
+++ b/src/app/body/resume/resume.component.html
@@ -8,7 +8,7 @@
     
       <h3>Let's build great things together</h3>
 
-    <a href="../../../assets/resume.pdf"><button> Resume </button></a>
+    <a href="../../../assets/resume.pdf"aria-label="download Jaime Moncayo's resume"><button> Resume </button></a>
 
    </div>
 
