--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,17 +12,15 @@
     <li class="nav-item"><a href="#exp">Experience</a></li>
     <li class="nav-item"><a href="#abt">About</a></li>
     <!-- <li class="nav-item"><a href="#">About</a></li> -->
-    <div id="open">
-      <div id="menu"><i class="fa fa-bars" aria-hidden="true" (click)="toggle()"></i></div>
-    </div>
-
+    <li id="menu"><i class="fa fa-bars" aria-hidden="true" (click)="toggle()"></i></li>
   </ul>
 
 </nav>
 
 
 <!-- Sidebar -->
-<div id="sidebar" [hidden]="!initSlider" [ngClass]="{ 'slider' : initSlider , 'opened' : sidebarActive, 'closed' : !sidebarActive }">
+<div id="sidebar" [hidden]="!initSlider"
+  [ngClass]="{ 'slider' : initSlider , 'opened' : sidebarActive, 'closed' : !sidebarActive }">
   <div id="mySidenav" class="sidenav">
     <a href="#abt" (click)="toggle()">About</a>
     <a href="#exp" (click)="toggle()">Experience</a>
