--- a/src/app/body/contact/contact.component.css
+++ b/src/app/body/contact/contact.component.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 60vh;
     background-image: url("../../../assets/IMG-0874.JPG");
-    background-attachment: fixed;
+    background-attachment: var(--parallax-on-off);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
