--- a/src/app/body/contact/contact.component.css
+++ b/src/app/body/contact/contact.component.css
@@ -3,15 +3,12 @@
 }
 #photo {
     width: 100%;
-    height: 60vh;
-    background-image: url("../../../assets/IMG-0874.JPG");
-    background-attachment: var(--parallax-on-off);
-    background-position: center;
-    background-repeat: no-repeat;
+    height: 30vh;
+    background-color: black;
     background-size: cover;
     text-align: center;
     vertical-align: middle;
-    line-height: 50vh;
+    line-height: 34vh;
 }
 
 
