--- a/src/app/body/experience/experience.component.css
+++ b/src/app/body/experience/experience.component.css
@@ -11,9 +11,9 @@
 
 #experience-text {
     font-size: var(--experience-text-size);
-    font-weight: 550;
+    font-weight: 600;
     font-family: 'Lato', sans-serif;
-    color:white;
+    color:rgb(236, 240, 241);
 }
 
 #bracket{
@@ -25,7 +25,7 @@
 
 #expitem{
     font-style: normal;
-    color: black;
+    color: #0fc9f8;;
     position: absolute;
 }
 
@@ -34,6 +34,17 @@
     font-style: normal;
     margin-left: 1.5em;
     padding-left: 2.8em;
-    margin-right: .5em;
+    margin-right: .5em;    
 }
 
+.blinking-text{
+    animation:blinkingText 2.2s infinite;
+}
+@keyframes blinkingText{
+    0%{     color: rgb(220, 0, 0);    }
+    20%{    color: rgb(200, 0, 0); }
+    49%{    color: rgb(180, 0, 0); }
+    60%{    color: transparent; }
+    99%{    color:transparent;  }
+    100%{   color: rgb(255, 0, 0);    }
+}
