added go to technologies

--- a/src/app/body/technologies/technologies.component.html
+++ b/src/app/body/technologies/technologies.component.html
@@ -15,6 +15,11 @@
       </div>
     </div>
     <div drag-scroll-item>
+      <div class="icon" style="background-color: #29adbe;">
+        <i class="devicon-go-line"></i>
+      </div>
+    </div>
+    <div drag-scroll-item>
       <div class="icon" style="background-color: #6B5B95;">
         <i class="devicon-nodejs-plain-wordmark colored"></i>
       </div>
@@ -32,6 +37,11 @@
     <div drag-scroll-item>
       <div class="icon" style="background-color: red;">
         <i class="devicon-angularjs-plain" style="color: white"></i>
+      </div>
+    </div>
+    <div drag-scroll-item>
+      <div class="icon" style="background-color: rgb(59, 189, 92);">
+        <i class="devicon-postgresql-plain-wordmark colored"></i>
       </div>
     </div>
     <div drag-scroll-item>
